# g2o-example

./: CMakeLists.txt  fit_curve.cpp  readme.md  viewer.py
cmake/: FindEigen3.cmake  FindG2O.cmake
